--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,16 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<div class="login-container">
+<div class="container">
+    <div class="header">
+        <img src="/images/logo.jpeg" alt="Logo" class="logo">
+        <h1 class="app-name">VacayVenture</h1>
+    </div>
+    <h2>Login</h2>
     <form action="/login" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" placeholder="Username" required>
+
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+
         <button type="submit">Login</button>
     </form>
 </div>
